kubernetes/src/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsws-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api-nasabah.wahidin.go.id
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-nasabah
                port:
                  number: 8080
    - host: api-wilayah.wahidin.go.id
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-wilayah
                port:
                  number: 8080
